--- a/kafinalprojectfrontend/src/app/components/todos/todos.component.html
+++ b/kafinalprojectfrontend/src/app/components/todos/todos.component.html
@@ -3,10 +3,10 @@
   </div>
 
 
-<table class="table">
+<!-- <table class="table">
     <tr *ngFor="let todo2 of todos">
         <td>{{todo2.userId}}</td>
         <td>{{todo2.id}}</td>
         <td>{{todo2.title}}</td>
     </tr>
-</table>
+</table> -->
