--- a/kafinalprojectfrontend/src/app/app.component.html
+++ b/kafinalprojectfrontend/src/app/app.component.html
@@ -2,17 +2,18 @@
 <div class="container">
     
     <app-navi></app-navi>
-    <!-- <div class="row">
+    <div class="row">
         <div class="col-md-3">
             <app-category></app-category>
         </div>
         <div class="col-md-9"> 
+           
             <app-product></app-product>
         </div>
         
        
-    </div> -->
-    <app-todos></app-todos>
+    </div>
+    
   
     <router-outlet></router-outlet>  
 </div>
