--- a/kafinalprojectfrontend/src/app/components/category/category.component.html
+++ b/kafinalprojectfrontend/src/app/components/category/category.component.html
@@ -1,6 +1,6 @@
   
 <ul class="list-group">
-  <li routerLink = "/products">Tüm Ürünler</li>
+  <li [class]="getAllCategoryClass()" routerLink = "/products">Tüm Ürünler</li>
   <li (click)="setCurrentCategory(category)"
   routerLink = "/products/category/{{ category.categoryId }}"
   *ngFor="let category of categories" 
