--- a/kafinalprojectfrontend/src/app/components/product/product.component.html
+++ b/kafinalprojectfrontend/src/app/components/product/product.component.html
@@ -2,6 +2,13 @@
     <span class="visually-hidden">Loading...</span>
   </div>
 
+  <div class="mb-3">
+    <label for="f ilterText"class="form-lable">Ürün Ara</label>
+    <input type="search" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="arama ifadesini giriniz">
+  </div>
+  <div *ngIf="filterText"  class="alert alert-success" >
+     {{filterText}} aradiniz
+  </div>
 <table *ngIf="dataLoaded!=false" class="table">
     <thead>
         <tr>
@@ -9,13 +16,21 @@
             <th>Name</th>
             <th>CategoryId</th>
             <th>UnitInStock</th>
+            <th>Fiyatı</th>
+            <th>Kdv'li Fiyatı</th>
+            <th></th>
         </tr>
     </thead>
-    <tr *ngFor="let product of products">
-        <td>{{product.productId}}</td>
-        <td>{{product.productName}}</td>
-        <td>{{product.categoryId}}</td>
-        <td>{{product.unitsInStock}}</td>
-       
-    </tr>
+    <tbody>
+        <tr *ngFor="let product of products |filterPipe:filterText">
+            <td>{{product.productId}}</td>
+            <td>{{product.productName |uppercase}}</td>
+            <td>{{product.categoryId}}</td>
+            <td>{{product.unitsInStock}}</td>
+            <td>{{product.unitPrice | currency}}</td>
+            <td>{{product.unitPrice |  vatAdded:18 |currency}}</td>
+            <td><button (click)="addToCart(product)" type="button" class="btn btn-success">Sepete Ekle</button></td>
+        </tr>
+    </tbody>
+   
 </table>
